# project-zimovka

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
docs/: about_environment_settings.md  notes.md  project_zimovka.md  wbs.md
include/app/: Application.hpp
include/zimovka/app/: Application.hpp
include/zimovka/config/: SimulationConfig.hpp
include/zimovka/core/: Circle.hpp  Vec2.hpp
include/zimovka/debug/: DebugAccumulator.hpp  DebugOverlay.hpp  DebugStatas.hpp  DebugStats.hpp
include/zimovka/engine/update/: UpdatePipeline.hpp
include/zimovka/events/: GamePlayTickEvents.hpp  PlayerWeaponEvents.hpp  PlayerWeaponTickEvents.hpp
include/zimovka/input/: Action.hpp  InputState.hpp  InputSystem.hpp
include/zimovka/platform/: SdlContext.hpp  Window.hpp
include/zimovka/rendering/: Color.hpp  PrimitiveRenderer.hpp  Renderer.hpp  TextTexture.hpp
include/zimovka/replay/: RunRecord.hpp  RunRecorder.hpp  RunRecorderSystem.hpp
include/zimovka/system/player/: Player.hpp  PlayerSystem.hpp
include/zimovka/systems/bullet/: Bullet.hpp  BulletSystem.hpp
include/zimovka/systems/collision/: CollisionSystem.hpp  CollisionUtilities.hpp
include/zimovka/systems/enemy/: Enemy.hpp  EnemyDamageResult.hpp  EnemySystem.hpp
include/zimovka/systems/player/: Player.hpp  PlayerSystem.hpp  PlayerWeaponConfig.hpp  PlayerWeaponState.hpp  PlayerWeaponSystem.hpp
src/: main.cpp
src/app/: Application.cpp
src/core/: Window.cpp
src/debug/: DebugOverlay.cpp
src/engine/update/: UpdatePipeline.cpp
src/input/: InputState.cpp  InputSystem.cpp
src/platform/: SdlContext.cpp  Window.cpp
src/rendering/: PrimitiveRenderer.cpp  Renderer.cpp  TextTexture.cpp
src/replay/: RunRecorder.cpp  RunRecorderSystem.cpp
src/system/player/: PlayerSystem.cpp
src/systems/bullet/: BulletSystem.cpp
src/systems/collision/: CollisionSystem.cpp
src/systems/enemy/: EnemySystem.cpp
src/systems/player/: PlayerSystem.cpp  PlayerWeaponSystem.cpp
tests/: CMakeLists.txt  test_BulletSystem.cpp  test_Collision.cpp  test_DebugAccumulator.cpp  test_InputState.cpp  test_InputSystem.cpp  test_PlayerSystem.cpp  test_PlayerWeaponSystem.cpp  test_RunRecorder.cpp  test_RunRecorderSystem.cpp  test_Vec2.cpp  test_bullet_system.cpp  test_collision.cpp  test_debug_accumulator.cpp  test_input.cpp  test_player_system.cpp  test_vec2.cpp
